syntax = "proto3";

package login;

message UserRequest {
  string name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
}

message LoginResponse {
  string message = 1;
}

service LoginService {
  rpc Login(UserRequest) returns (LoginResponse) {
  }
}